<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/drug_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/med_name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drug_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_name_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drug_dose_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_description_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_intake_missed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dosage"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_dose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drug_intake_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_dose_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_timing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drug_intake_time"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_timing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
