<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <LinearLayout
            android:id="@+id/drug_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/med_name"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drug_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_name_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/drug_dose_qnty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_description_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_intake_missed_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dosage"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_dose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/drug_dose_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_dose_qnty_layout"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/drug_intake_missed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/drug_intake_count"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_drug_intake_missed_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_list_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drug_dose_layout"
            android:text="List Of Dates:"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/list_dates_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_list_dates" />


    </RelativeLayout>
</android.support.v7.widget.CardView>